[package]
name = "miniaudio_aurex"
version = "0.11.22"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust bindings for miniaudio with Aurex tweaks"
repository = "https://github.com/yourname/miniaudio_aurex"
readme = "README.md"
keywords = ["audio", "miniaudio", "sound"]
categories = ["multimedia", "api-bindings"]

[dependencies]